# Nextcloud_API_Grabber

./: CMakeLists.txt  component.mk
docs/: doxyfile  index.html
docs/doxygen/html/: annotated.html  annotated_dup.js  api__grabber_8c_source.html  api__grabber_8h_source.html  api__grabber__settings_8h_source.html  classes.html  dir_0af1587c8378955de40f48b4bd1869f0.html  dir_0af1587c8378955de40f48b4bd1869f0.js  dir_1d3d17fd39ff64585f355bac45a1e142.html  dir_1fe7beede87d8b86a53b55b0c4067237.html  dir_3a8feefd1cb361d121d387a3d880dbce.html  dir_64175eaeb5a1b84aa41758680b1a0262.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7521ccc25383cdeaef39775932677b48.html  dir_8328a9b53da582c939870fbefa7c6a21.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_bfccd401955b95cf8c75461437045ac0.js  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d54811d2a51e09a449ea3b0c8f76d240.html  dir_d68249ec35b8aa7dffbd2eed210e017a.html  dir_da4ffc9903ae04f30d80fa30e40adc40.html  dir_e4db62497e01360de151742c4c9ede63.html  dir_e5b2ecf6d1ef0072faef0658350a8934.html  dir_e5b2ecf6d1ef0072faef0658350a8934.js  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  files_dup.js  index.html  navtreedata.js  navtreeindex0.js  platform__dep_8c_source.html  propfind__attr_8h_source.html  request__parser_8c_source.html  request__parser_8h_source.html  structapi__grabber__prop__t.html  structinstance__prop__t.html  structreq__memory.html  web__request__tools_8c_source.html  web__request__tools_8h_source.html  (+1 more)
docs/doxygen/html/search/: all_1.js  all_2.js  classes_0.js  searchdata.js
examples/: CMakeLists.txt
examples/DownloadFile/: DownloadFile.c
examples/RequestFileProperties/: RequestFileProperties.c
examples/download_file/: download_file.c
examples/request_file_properties/: request_file_properties.c
examples/upload_file/: upload_file.c
inc/: API_Grabber.h  ReqeustParsing.h  RequestParsing.h  WebRequests.h  api_grabber.h  api_grabber_settings.h  library.h  propfind_attr.h  request_parser.h  web_request_tools.h  web_requests.h  xml_parser_strings.h
src/: API_Grabber.c  RequestParsing.c  WebRequests.c  api_grabber.c  request_parser.c  web_requests.c
src/base/: api_grabber.c  web_request_tools.c
src/platform_dep/ESP32/: platform_dep.c
src/platform_dep/PC/: platform_dep.c
